--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Do campo à cidade</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=2.0">
-       <title>Do campo para cidade</title>
-    </head>
-</body>
+    <header>
+        <h1>Do campo à cidade</h1>
+        <img src="vida-no-campo-versus-na-cidade.jpg" alt="Foto do campo,versus cidade.">
+        <p>A cidade no campo pode ser um recurso com seus pontos positivos, mas não podemos deixar de lado os seus pontos negativos. Nesta página, veremos as vantagens e desvantgens da cidade no campo.</p>
+        <nav>
+            <ul>
+                <li><a href="#problemas">Os Problemas</a></li>
+                <li><a href="#consequencias">Consequências</a></li>
+                <li><a href="#conclusao">Conclusão</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<body>
-    <h1>Bem-Vindo(a)!</h1>
-    <h2>Do campo à cidade</h2>
-    <p>Vamos entender as conecções do campo para a cidade</p>
-</body>
-</html>
-
-<body>
-    <head>
-        <h3>titulo</h3>
-    </head>
-</body>
+<!-- código omitido -->
