--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <img src="vida-no-campo-versus-na-cidade.jpg" alt="Foto do campo,versus cidade.">
         <p>A cidade no campo pode ser um recurso com seus pontos positivos, mas não podemos deixar de lado os seus pontos negativos. Nesta página, veremos as vantagens e desvantgens da cidade no campo.</p>
         <nav>
+            <img src="" 
+              </rel><link="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRepuUGIFaopVm0-W29PBy2U35-rAAS1TzDVwAuxHZ3r37VNys4vjkW-ny1flvK">
+                 <p>
+                    <header>
+                        <h1></h1>
+                    </header>
+                 </p>
             <ul>
                 <li><a href="#problemas">Os Problemas</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
